mozilla layout bug fix

--- a/static/html/css/test.css
+++ b/static/html/css/test.css
@@ -85,7 +85,6 @@ hr {
     position: relative;
     left: calc(20vh + 1vw);
     width: calc(100vw - 20vh - 3vw);
-    height: 100%;
     flex-shrink: 0;
 }
 
